force-app/main/default/objects/PopcornFeatureElementExecution__c/PopcornFeatureElementExecution__c.object-meta.xml
<CustomObject>
    <label>Popcorn Feature Element Execution</label>
    <nameField>
        <displayFormat>SEXEC#{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Popcorn Feature Element Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>