force-app/main/default/objects/PopcornFeatureElementExecution__c/fields/FeatureElement__c.field-meta.xml
<CustomField>
    <fullName>FeatureElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature Element</label>
    <referenceTo>PopcornFeatureElement__c</referenceTo>
    <relationshipName>FeatureElementExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>