force-app/main/default/objects/PopcornFeatureElementExecution__c/fields/FeatureElementExecutionRef__c.field-meta.xml
<CustomField>
    <fullName>FeatureElementExecutionRef__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Feature Element Execution Ref</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>