force-app/main/default/objects/PopcornFeatureElementExecution__c/fields/FeatureExecution__c.field-meta.xml
<CustomField>
    <fullName>FeatureExecution__c</fullName>
    <label>Feature Execution</label>
    <referenceTo>PopcornFeatureExecution__c</referenceTo>
    <relationshipName>ScenarioExecutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>