force-app/main/default/objects/PopcornFeatureElementExecution__c/fields/ResultDuration__c.field-meta.xml
<CustomField>
    <fullName>ResultDuration__c</fullName>
    <label>Result Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>