force-app/main/default/objects/PopcornFeatureElementExecution__c/fields/ResultStatus__c.field-meta.xml
<CustomField>
    <fullName>ResultStatus__c</fullName>
    <label>Result Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ResultStatus</valueSetName>
    </valueSet>
</CustomField>